--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "node index.js",
     "start-dev": "nodemon index.js",
     "build": "webpack --mode production",
-    "watch": "webpack --mode development --watch"
+    "build2": "webpack",
+    "watch": "webpack --mode development --watch",
+    "dev": "webpack --mode development --env.dist=false",
+    "dev:dist": "webpack --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -33,9 +36,11 @@
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "@babel/register": "^7.10.3",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-transform-require-ignore": "^0.1.1",
     "css-loader": "^3.6.0",
+    "eslint-plugin-react": "^7.20.3",
     "file-loader": "^6.0.0",
     "jest": "^26.0.1",
     "mini-css-extract-plugin": "^0.8.2",
