--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^2.7.4",
     "eslint": "^7.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "react": "^16.13.1",
